src/objects/Testcase_Step__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_result__c</fullName>
        <label>Expected result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <label>Test Case</label>
        <referenceTo>Test_Case__c</referenceTo>
        <relationshipLabel>Testcase Steps</relationshipLabel>
        <relationshipName>Testcase_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Testcase Step</label>
    <nameField>
        <displayFormat>TS-{000000000}</displayFormat>
        <label>Testcase Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testcase Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>